[package]
name = "mango-logs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "mango_logs"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
devnet = []
default = []

[dependencies]
anchor-lang = { rev = "v0.22.1", git = "https://github.com/project-serum/anchor.git" }
base64 = "0.13.0"
